# voiceRag

./: .gitignore  README.md  pyproject.toml  rag.ipynb  voicerag.py
app/: app.py  config.py  index.html  models.py  rag.py  routes.py  stt.py  tts.py
